--- a/Week1/style.css
+++ b/Week1/style.css
@@ -1,12 +1,23 @@
 form div label {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 form div {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 #tombolDaftar {
-    background-color: forestgreen;
-    color: white;
-    border-radius: 7%;
+  background-color: forestgreen;
+  color: white;
+  border-radius: 7%;
+}
+
+div {
+  background-color: gray;
+  width: 500px;
+  border-radius: 3px padding 20px;
+  border-bottom: 10px;
+}
+
+#tombolDaftar:hover {
+  background-color: darkgreen;
 }
